--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,41 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
+body {
+  font-family: Arial, sans-serif;
+  font-size:large;
+}
+
 .navbar {
-    background-color: #333;
-    overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  padding: 10px;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.navbar-left, .navbar-right, .navbar-center {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-left {
+  justify-content: flex-start;
+}
+
+.navbar-center {
+  flex-grow: 1;
+  justify-content: center;
+}
+
+.navbar-right {
+  justify-content: flex-end;
 }
 
 .navbar a {
@@ -13,11 +48,15 @@
   }
   
   .navbar a:hover {
-    background-color: #ddd;
-    color: black;
+    color: #767373;
   }
-  
-  .navbar a.active {
-    background-color: #04AA6D;
-    color: white;
-  }
+
+  .navbar a img {
+    width: 28px; 
+    height: 28px; 
+}
+
+.navbar a:hover img {
+  filter: brightness(0.3); 
+}
+
