--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 .footer-navbar {
     display: flex; 
-    position:absolute;
+    position:relative;
     justify-content: space-between;
     bottom: 0;
     width: 100%;
