--- a/styles/service.css
+++ b/styles/service.css
@@ -1,26 +1,208 @@
 html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    background-color: black;
-    overflow: hidden;
-  }
-  body {
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    overflow-y: scroll;
-  }
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  overflow: hidden;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  overflow-y: scroll;
+}
   
-  ::-webkit-scrollbar {
-    width: 0px;  
-    background: transparent;
-  }
+::-webkit-scrollbar {
+  width: 0px;  
+  background: transparent;
+}
   
-  .center-container {
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-  }
+.center-container {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+h2 {
+  color: white;
+  font-weight: 100;
+  font-size: 30px;
+}
+
+.main-txt {
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 10px;
+  padding-top: 50px;
+}
+
+#option1-txt {
+  color: white;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  padding-top: 180px;
+}
+
+#option2-txt, #option3-txt {
+  color: white;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  padding-top: 180px;
+  display: none;
+}
+
+#buttons {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-top: 150px;
+  margin-bottom: 118px;
+}
+
+.service-pair, .change-pair {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#buttons > *:not(:last-child) {
+  margin-right: 125px;
+}
+
+.button-service, .button-change {
+  width: 200px;
+  height: 95px;
+  background-color: transparent;
+  color: white;
+  font-size: 20px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  border: 2px solid white; 
+  cursor: pointer;
+  user-select: none; 
+  transition: background-color 0.3s ease, color 0.3s ease;
+  margin-bottom: 55px;
+}
+
+.pair-txt  {
+  color: white;
+  font-weight: 100;
+  font-size: 18px;
+}
+
+.button-service:hover, .button-change:hover {
+  background-color: white;
+  color: black;
+}
+
+#message-button {
+    display: none;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+}
+
+textarea {
+  width: 850px;
+  height: 350px;
+  font-size: 20px;
+  border-style: none;
+  padding: 10px;
+  box-sizing: border-box;
+  resize: none;
+  text-align: left;
+  overflow: hidden;
+  line-height: 1.5;
+  display: block;
+}
+
+textarea {
+  vertical-align: top;
+}
+
+.button {
+  margin-top: 15px;
+  width: 150px;
+  height: 75px;
+  background-color: transparent;
+  color: white;
+  font-size: 20px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  border: 2px solid white; 
+  border-radius: 10px;
+  cursor: pointer;
+  user-select: none; 
+  transition: background-color 0.3s ease, color 0.3s ease;
+  margin-left: auto;  
+  margin-right: auto;
+  margin-bottom: 15px;
+}
+
+.button2 {
+  margin-top: 15px;
+  width: 150px;
+  height: 75px;
+  background-color: transparent;
+  color: white;
+  font-size: 20px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  border: 2px solid white; 
+  border-radius: 10px;
+  cursor: pointer;
+  user-select: none; 
+  transition: background-color 0.3s ease, color 0.3s ease;
+  margin-left: auto;  
+  margin-right: auto;
+  margin-bottom: 45px;
+}
+
+.button:hover {
+  background-color: white;
+  color: black;
+}
+
+.button2:hover {
+  background-color: white;
+  color: black;
+}
+
+#email-name {
+  display: none;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
+}
+
+input {
+  background-color: transparent;
+  width: 750px;
+  height: 90px;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  border: none;
+  border-bottom: 2px solid white;
+  color: white;
+  font-size: 22px;
+  outline: none; 
+  box-sizing: border-box; 
+}
+
+input:hover, input:focus {
+  border-style: none;
+  border-bottom: 2px solid white;
+}
+
