--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,13 +4,16 @@
     justify-content: space-between;
     bottom: 0;
     width: 100%;
-    background-color: #3333339a;
+    background-color: black;
+    background-repeat: no-repeat;
     color: #f2f2f2;
     padding: 5px;
     align-items: center;
     text-align: center;
     overflow: hidden;
     box-sizing: border-box;
+    border-top: 2px solid white;
+    height: 65px;
 }
 
 .footer-navbar-left, .footer-navbar-right {
