--- a/styles/review.css
+++ b/styles/review.css
@@ -3,14 +3,13 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background-color: #000000;
+    background-image: url("../pictures/background.jpg");
     overflow: hidden;
 }
   
 body {
     font-family: Arial, sans-serif;
     font-weight: bold;
-    overflow-y: scroll;
 }
     
 ::-webkit-scrollbar {
