--- a/styles/browse.css
+++ b/styles/browse.css
@@ -321,4 +321,161 @@ img {
     height: 90%;
 }
 
+@media (max-width: 1919px) {
+
+    #filter-container {
+        flex: 0 0 20%;
+        padding: 20px;
+        height: 605px;
+        padding-top: 5px;
+    }
+    
+    #main-container {
+        flex: 0 0 80%;
+        height: 605px;
+    }
+    
+    #type-txt, #type-txt2, #type-txt3 {
+        padding-bottom: 15px;
+        font-size: 18px;
+    }
+    
+    #type-txt::after, #type-txt::before {
+        bottom: 0;
+        left: -30%; 
+        right: -30%; 
+        height: 2px; 
+    }
+    
+    #type-txt2::after, #type-txt2::before {
+        bottom: 0;
+        left: -25%; 
+        right: -25%; 
+        height: 2px; 
+    }
+    
+    #type-txt3::after, #type-txt3::before {
+        bottom: 0;
+        left: -50%; 
+        right: -50%; 
+        height: 2px; 
+    }
+    
+    .custom-checkbox-container {
+        padding-top: 15px;
+    }
+
+    .custom-checkbox + label {
+        width: 20px;
+        height: 20px; 
+    }
+
+    .checkbox-text {
+        font-size: 18px;
+        margin-right: 30px;
+    }
+    
+    #search-container {
+        flex: 0 0 10%;
+    }
+    
+    
+    input[type="text"] {
+        width: 450px;
+        height: 40px;
+        border-radius: 10px 0 0 10px;
+        font-size: 18px;
+        margin-top: 5px;
+    }
+    
+    #search-btn {
+        width: 35px;
+        height: 42px;
+        background-size: 25px 25px;
+        border-radius: 0 10px 10px 0;
+        margin-top: 5px;
+        padding: 0; 
+    }
+    
+    #search-bar {
+        margin-left: 120px;
+    }
+    
+    .dropdown {
+        margin-left: 100px;
+        margin-top: 10px;
+    }
+    
+    .dropbtn {
+        height: 42px;
+        font-size: 16px;
+        border-radius: 9px;
+        width: 200px;
+    }
+    
+    .dropdown-content {
+        min-width: 200px;
+        border-radius: 10px;
+        margin-top: 5px;
+        top: 100%;
+        margin-top: 1px;
+    }
+    
+    .dropdown-content a {
+        padding: 12px 16px;
+        font-size: 14px;
+    }
+    
+    #pc-container {
+        flex: 0 0 80%;
+        margin-top: 25px;
+        height: 95px;
+        width: 1200px;
+    }
+    
+    #scrollable-content {
+        height: 110%;
+        flex: 1;
+        margin-left: 10px;
+        width: 100%;
+    }
+    
+    #custom-scrollbar {
+        width: 10px; 
+        border-radius: 10px;
+        margin-left: 20px;
+        margin-right: 20px;
+        height: 110%; 
+    }
+    
+    #scroll-thumb {
+        width: 100%;
+        border-radius: 5px;  
+        height: 50px;
+    }
+    
+    #scrollable-content p {
+        font-size: 18px;
+    }
+    
+    #item {
+        flex: 0 0 30%;
+        max-width: 30%; 
+        margin: 1%;
+        width: 190px;
+        height: 190px;
+        margin-bottom: 140px;
+    }
+    
+    #item-pic {
+        margin: 30px;
+        margin-bottom: 0px;
+    }
+    
+    img {
+        width: 90%; 
+        height: 90%;
+    }
+}
+
 
