--- a/styles/contact.css
+++ b/styles/contact.css
@@ -117,3 +117,55 @@ textarea {
     background-color: white;
     color: black;
 }
+
+@media (max-width: 1919px) {
+
+    #txt1 {
+        font-size: 24px;
+    }
+        
+    #txt2, #txt3  {
+        font-size: 18px;
+    }
+
+    #txt2 {
+        width: 120%;
+        margin-bottom: 9.5px;
+    }
+        
+    #email-name {
+        width: 550px;
+        
+    }
+        
+    #txt3 {
+        margin-top: 15px; 
+        margin-bottom: 15px;
+    }
+          
+    input {
+        width: 550px;
+        height: 50px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        font-size: 20px;
+    }
+
+    textarea {
+        width: 550px;
+        height: 150px;
+        font-size: 18px;
+        padding: 10px;
+        line-height: 1.5;
+    }
+    
+    .button {
+        margin-top: 15px;
+        width: 120px;
+        height: 65px;
+        font-size: 18px;    
+        border-radius: 10px;
+        margin-bottom: 15px;
+    }
+    
+}
