--- a/styles/register.css
+++ b/styles/register.css
@@ -97,3 +97,50 @@ input[type="text"]:focus, input[type="password"]:focus {
     background-color: white;
     color: black;
 }
+
+@media (max-width: 1919px) {
+    #center-container {
+        padding: 21px;
+    }
+      
+    #register-box {
+        border-radius: 60px;
+        height: 560px;
+        width: 525px;
+    }
+
+    .title {
+        padding-top: 20px;
+        font-size: 18px;
+    }
+       
+    .email-txt {
+        padding-left: 70px;
+        padding-top: 15px;
+        font-size: 18px;
+    }
+    
+    .pass-txt {
+        padding-left: 70px;
+        padding-top: 5px;
+        font-size: 18px;
+    }
+
+    input[type="text"], input[type="password"] {
+        width: 380px;
+        height: 60px;
+        border-radius: 18px;
+        font-size: 18px;
+        margin-left: 70px;
+        margin-top: 5px;
+    }
+       
+    
+    .button {
+        margin-top: 20px;
+        width: 135px;
+        height: 65px;
+        font-size: 19px;
+        border-radius: 8px;
+    }
+}
