--- a/styles/review.css
+++ b/styles/review.css
@@ -135,3 +135,91 @@ p {
     width: 40px;
     height: 40px;
 }
+
+@media (max-width: 1919px) {
+    #review-block {
+        display: flex;
+        flex-direction: column;
+        align-items: center; 
+        justify-content: center; 
+        width: 750px;
+    }
+
+    #txt1 {
+        font-size: 23px;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    
+    .button {
+        margin-top: 25px;
+        width: 265px;
+        height: 65px;
+        background-color: transparent;
+        color: white;
+        font-size: 20px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+        border: 2px solid white; 
+        cursor: pointer;
+        user-select: none; 
+        transition: background-color 0.3s ease, color 0.3s ease;
+        margin-left: auto;  
+        margin-right: auto;
+        margin-bottom: 26px;
+    }
+
+    .reviews-container {
+        width: 100%; 
+        max-width: 670px; 
+        height: 400px;
+        padding:  15px 0 15px 0;
+        background-color: white;
+        border: 1px solid black;
+        overflow-y: auto;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        box-sizing: border-box; 
+    }
+    
+    .review {
+        display: flex;
+        align-items: center;
+        margin-bottom: 15px;
+        padding-bottom: 10px;
+        border-bottom: 2px solid black;
+        box-sizing: border-box;
+        width: 100%;
+        height: 65px;
+    }
+
+    .review-text {
+        font-size: 16px;
+        margin: 0 0 10px 0;
+        color: #333;
+    }
+    
+    .review-author {
+        font-size: 14px;
+        margin: 0;
+        color: #666;
+    }
+    
+    .review-right {
+        display: flex;
+        align-items: center;
+        margin-left: 25px; 
+        flex-shrink: 0; 
+    }
+    
+    .review-rating {
+        font-size: 14px;
+        margin-right: 5px;
+        color: #333;
+    }
+    
+    .review-right .review-image {
+        width: 38px;
+        height: 38px;
+    }
+}
