--- a/styles/review_write.css
+++ b/styles/review_write.css
@@ -132,7 +132,8 @@ textarea {
 }
 
 #pic-upload img {
-    max-width: 120px;
+    width: 120px;
+    height: 120px;
     margin-bottom: 10px;
     cursor: pointer; 
 }
@@ -155,4 +156,85 @@ textarea {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+}
+
+@media (max-width: 1919px) {
+    #txt1 {
+        font-size: 23px;
+        margin-bottom: 0px;
+        margin-top: 17px;
+    }
+        
+    #txt2  {
+        font-size: 16px;
+        font-weight: 100;
+        margin-bottom: 10px;
+    }
+    
+    #txt3 {
+        margin-left: 100px;
+        margin-top: 15px; 
+        margin-bottom: 15px;
+        font-size: 18px;
+        font-weight: 100;
+    }
+    
+    #txt4 {
+        font-size: 16px;
+    }
+
+    input {
+        background-color: transparent;
+        width: 550px;
+        height: 50px;
+        margin-bottom: 10px;
+        border: none;
+        border-bottom: 2px solid white;
+        color: white;
+        font-size: 20px;
+        outline: none; 
+        box-sizing: border-box; 
+    }
+
+    textarea {
+        width: 550px;
+        height: 130px;
+        font-size: 20px;
+        border-style: none;
+        padding: 5px;
+    }
+    
+    .button {
+        margin-top: 5px;
+        width: 130px;
+        height: 55px;
+        font-size: 20px;
+        border-radius: 8px;
+        margin-bottom: 15px;
+    }
+
+    #pic-upload {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        width: 250px;
+        box-sizing: border-box;
+    }
+    
+    #pic-upload img {
+        width: 100px;
+        height: 100px;
+        margin-bottom: 10px;
+        cursor: pointer; 
+    }
+    
+    #pic-upload p {
+        color: white;
+        font-size: 16px;
+        margin: 0;
+        text-align: center;
+        cursor: pointer; 
+    }
 }
